--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "nunomaduro/larastan": "^2.6",
         "pestphp/pest": "^2.8",
         "pestphp/pest-plugin-laravel": "^2.0",
         "phpunit/phpunit": "^10.1",
@@ -52,6 +53,14 @@
             "@php ./vendor/bin/pint"
         ],
         "pest": [
+            "@php ./vendor/bin/pest"
+        ],
+        "stan": [
+            "@php ./vendor/bin/phpstan analyse"
+        ],
+        "clean": [
+            "@php ./vendor/bin/pint",
+            "@php ./vendor/bin/phpstan analyse",
             "@php ./vendor/bin/pest"
         ]
     },
